# rust_actix_smart_home

./: Cargo.toml  README.md  test.db
client/: Cargo.toml  test.py
client/src/: lib.rs
gui/: Cargo.toml
gui/src/: main.rs
migrations/2024-05-15-130906_create_sh/: down.sql  up.sql
scripts/: create_house.sh
src/: actions.rs  handlers.rs  main.rs  models.rs  schema.rs
src/report_generator/: mod.rs
