[workspace]
members = ["client", "gui"] 
[package]
name = "actix-smarthome"
version = "0.1.0"
edition = "2021"
include = ["/src", "/client", "/tui", "/gui"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.3"
actix-web = "4.4"
actix-cors = "0.7.0"
env_logger = "0.11"
diesel = { version = "2", features = ["sqlite", "r2d2"] }
serde = { version = "1.0.201", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
dotenvy = "0.15"
log = "0.4.21"
tokio = "1.37.0"
