[package]
name = "gui"
version = "0.1.0"
edition = "2021"

[dependencies.iced]
git = "https://github.com/iced-rs/iced.git"
rev = "cdb18e610a72b4a025d7e1890140393adee5b087"

[dependencies]
serde = { version = "1.0.203", features = ["derive"]}
serde_json =  "1.0.117" 
reqwest = { version = "0.12.4", features = [
    "blocking",
    "cookies",
    "json",
    "multipart",
]}

[dependencies.uuid]
version = "1.8.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]